[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/SlotMachine.gd" type="Script" id=1]
[ext_resource path="res://fonts/Symtext.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/Blur.gd" type="Script" id=4]
[ext_resource path="res://shaders/Blur.gdshader" type="Shader" id=5]

[sub_resource type="Gradient" id=1]

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )
width = 1920

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float blur: hint_range(0,6) = 0.5;

void fragment()
{
	vec4 color= texture(SCREEN_TEXTURE, SCREEN_UV);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/blur = 0.5

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/lod = 2.486

[node name="root" type="Node2D"]
script = ExtResource( 3 )

[node name="Background" type="Sprite" parent="."]
modulate = Color( 0.639216, 0.25098, 0.239216, 1 )
light_mask = 257
scale = Vector2( 1, 1080 )
texture = SubResource( 2 )
centered = false

[node name="Roll" type="Button" parent="."]
margin_left = 1441.79
margin_top = 881.984
margin_right = 1782.79
margin_bottom = 963.984
custom_fonts/font = SubResource( 3 )
text = "Roll"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = 195.0
margin_top = 96.0
margin_right = 1195.0
margin_bottom = 896.0

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1000, 800 )
handle_input_locally = false
render_target_update_mode = 3

[node name="SlotMachine" type="Node2D" parent="ViewportContainer/Viewport"]
material = SubResource( 5 )
script = ExtResource( 1 )

[node name="BlurEffectRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = SubResource( 6 )
margin_left = 195.0
margin_top = 96.0
margin_right = 1195.0
margin_bottom = 896.0
rect_pivot_offset = Vector2( 1000, 0 )
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="BlurEffectRect"]

[connection signal="button_down" from="Roll" to="." method="_on_Roll_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer" to="ViewportContainer/Viewport/SlotMachine" method="_on_Timer_timeout"]
